--- a/src/GameOfLife.Core/GameOfLife.Core.fsproj
+++ b/src/GameOfLife.Core/GameOfLife.Core.fsproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Library.fs" />
+    <Compile Include="Model.fs" />
   </ItemGroup>
 
 </Project>
