--- a/src/GameOfLife.Core/GameOfLife.Core.fsproj
+++ b/src/GameOfLife.Core/GameOfLife.Core.fsproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Model.fs" />
+    <Compile Include="Cell.fs" />
+    <Compile Include="Board.fs" />
   </ItemGroup>
 
 </Project>
