--- a/tests/GameOfLife.Core.Tests/GameOfLife.Core.Tests.fsproj
+++ b/tests/GameOfLife.Core.Tests/GameOfLife.Core.Tests.fsproj
@@ -6,8 +6,12 @@
     <GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Tests.fs" />
+    <Compile Include="Cell.fs" />
+    <Compile Include="Board.fs" />
     <Compile Include="Program.fs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\GameOfLife.Core\GameOfLife.Core.fsproj" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
