--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "scripts": {
     "postinstall": "dotnet tool restore",
     "start": "dotnet fable watch src --run webpack-dev-server",
-    "build": "dotnet fable src && webpack"
+    "build": "dotnet fable src && webpack",
+    "test": "dotnet fable src -o output --run jest --config=jest.config.js"
   },
   "devDependencies": {
+    "@sinonjs/fake-timers": "^7.1.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "jest": "^27.5.1",
+    "prettier": "^2.7.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
   },
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  }
 }
