--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -4,10 +4,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Cell.fs" />
+    <Compile Include="Cell.Test.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Fable.Browser.Dom" Version="2.10.0" />
     <PackageReference Include="Fable.Core" Version="3.7.1" />
+    <PackageReference Include="Fable.Jester" Version="0.33.0" />
   </ItemGroup>
 </Project>
