--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "version": "1.0.0",
   "dependencies": {
+    "babel-jest": "^28.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
