--- a/package.json
+++ b/package.json
@@ -7,18 +7,11 @@
     "test": "dotnet fable src -o output --run jest --config=jest.config.js"
   },
   "devDependencies": {
-    "@sinonjs/fake-timers": "^7.1.2",
-    "@testing-library/jest-dom": "^5.16.4",
-    "jest": "^27.5.1",
+    "mocha": "^8.3.2",
     "prettier": "^2.7.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
   },
-  "version": "1.0.0",
-  "dependencies": {
-    "babel-jest": "^28.1.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  }
+  "version": "1.0.0"
 }
