--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "postinstall": "dotnet tool restore",
     "start": "dotnet fable watch src --run webpack-dev-server",
     "build": "dotnet fable src && webpack",
-    "test": "dotnet fable src -o output --run jest --config=jest.config.js"
+    "pretest": "fable-splitter tests -o dist/tests --commonjs",
+    "test": "mocha dist/tests"
   },
   "devDependencies": {
-    "mocha": "^8.3.2",
+    "fable-splitter": "^2.2.1",
+    "mocha": "^8.4.0",
     "prettier": "^2.7.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
