--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ temp/**
 output/
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
-
+dist/
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
