--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Cell.fs" />
+    <Compile Include="Board.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
   <ItemGroup>
