--- a/tests/tests.fsproj
+++ b/tests/tests.fsproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Board.fs" />
     <Compile Include="Cell.fs" />
+    <Compile Include="Test.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\src\App.fsproj" />
