--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -3,6 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Utils.fs" />
     <Compile Include="Cell.fs" />
     <Compile Include="Board.fs" />
     <Compile Include="App.fs" />
