--- a/tests/GameOfLife.Core.Tests/GameOfLife.Core.Tests.csproj
+++ b/tests/GameOfLife.Core.Tests/GameOfLife.Core.Tests.csproj
@@ -18,4 +18,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\GameOfLife.Core\GameOfLife.Core.csproj" />
+  </ItemGroup>
+
 </Project>
