--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -2,6 +2,7 @@
   <ItemGroup>
     <PackageVersion Include="Akka" Version="1.5.23" />
     <PackageVersion Include="Akka.Hosting" Version="1.5.22" />
+    <PackageVersion Include="Akka.TestKit.Xunit2" Version="1.5.25" />
     <PackageVersion Include="FluentResults" Version="3.15.2" />
     <PackageVersion Include="Microsoft.Orleans.Core" Version="8.1.0" />
     <PackageVersion Include="Microsoft.Orleans.TestingHost" Version="8.1.0" />
@@ -14,11 +15,10 @@
     <PackageVersion Include="Testcontainers" Version="3.1.0" />
     <PackageVersion Include="NBench" Version="2.0.1" />
     <PackageVersion Include="Verify.Xunit" Version="19.14.1" />
-    <PackageVersion Include="xunit.assert" Version="2.4.2" />
     <PackageVersion Include="Shouldly" Version="4.2.1" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
-    <PackageVersion Include="xunit" Version="2.4.2" />
-    <PackageVersion Include="xunit.runner.visualstudio" Version="2.4.5">
+    <PackageVersion Include="xunit" Version="2.8.1" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.1">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageVersion>
